<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arduino Pad</string>
    <string name="bt_devices_to_connect">Bluetooth devices to connect:</string>
    <string name="menu_settings">Settings</string>
    <string name="brightness_control">Brightness control:</string>
    <string name="speed_control">Speed control:</string>
    <string name="button_message">Button message:</string>
    <string name="search_finished">Search finished</string>
    <string name="empty_device_name">&lt;empty&gt;</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled.</string>
    <string name="no_bt_support">Your device does not support Bluetooth.</string>
    <string name="enable_bt">Enable Bluetooth</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="device_info">Device info</string>
    <string name="search_for_devices">Search for devices</string>
    <string name="sort_by_services">Sort by device services</string>
    <string name="sort_by_type">Sort by device type</string>
    <string name="sort_by_name">Sort by device name</string>
    <string name="device_name_to_search">Device name to search</string>
    <string name="no_services">Devices without services</string>
    <string name="filter_av">Audio Video</string>
    <string name="filter_computer">Computer</string>
    <string name="filter_health">Health</string>
    <string name="filter_misc">Misc</string>
    <string name="filter_imaging">Imaging</string>
    <string name="filter_networking">Networking</string>
    <string name="filter_peripheral">Peripheral</string>
    <string name="filter_phone">Phone</string>
    <string name="filter_toy">Toy</string>
    <string name="filter_wearable">Wearable</string>
    <string name="filter_uncategorized">Uncategorized</string>
    <string name="sort_by_bonded_state">Sort by bonded state</string>
    <string name="log_dlg_title">Log</string>
    <string name="save_settings">Save settings</string>
    <string name="show_log">Show log</string>
    <string name="collect_devices">Collect devices</string>
    
</resources>