<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="[not set]" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00" 
            android:text="[not set]" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00" 
            android:text="[not set]" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp" >

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:text="[not set]" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:text="[not set]" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:text="[not set]" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp" >

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:text="[not set]" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:text="[not set]" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:text="[not set]" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp" >

        <Button
            android:id="@+id/buttonLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:text="[not set]" />

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:text="[not set]" />

        <Button
            android:id="@+id/buttonRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:text="[not set]" />

    </LinearLayout>

    <View
	    android:layout_width="fill_parent" android:id="@+id/separator1"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content" android:id="@+id/textview1"
        android:layout_height="wrap_content"
        android:text="@string/speed_control" />
    
    <LinearLayout
        android:layout_width="match_parent" android:id="@+id/speedPanel"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >

        <SeekBar
            android:id="@+id/speedBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="6dp"
            android:layout_weight="4"
            android:max="9"
            android:progress="5" />

        <EditText
            android:id="@+id/speedText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="5" />

    </LinearLayout>

    <View
	    android:layout_width="fill_parent" android:id="@+id/separator2"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"  android:id="@+id/textview2"
        android:layout_height="wrap_content"
        android:text="@string/brightness_control" />
    
    <LinearLayout
        android:layout_width="match_parent" android:id="@+id/brightnessPanel"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >

        <SeekBar
            android:id="@+id/brightnessBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="6dp"
            android:layout_weight="4"
            android:max="9"
            android:progress="9" />

        <EditText
            android:id="@+id/brightnessText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="9" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/buttonSaveSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/save_settings" />

    </RelativeLayout>
    
</LinearLayout>